Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13402

sanity test_252: Invalid number of mdtlov clients returned by /usr/sbin/lr_reader

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.14.0
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for S Buisson <sbuisson@ddn.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/59cb919c-f797-4928-908e-b8cc42e8b5bd

      test_252 failed with the following error:

      Invalid number of mdtlov clients returned by /usr/sbin/lr_reader
      

      mdtlov for MDT0002 seems to be missing, as lr_reader output only shows lustre-MDT0001-mdtlov_UUID and lustre-MDT0003-mdtlov_UUID.
      So MDT target local to MDT0 is missing?

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_252 - Invalid number of mdtlov clients returned by /usr/sbin/lr_reader

            bzzz Alex Zhuravlev
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: