LU-13402 target: never exclude MDT/OST from last_rcvd

as it's supposed to be a mandatory part of recovery process

Fixes: 8bd04b4e5766 ("LU-12722 target: disable recovery for local clients")
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I5a41c500df04dc9eeecd3b94f69e4d2722e63410
Reviewed-on: https://review.whamcloud.com/38138
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>